{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 393,
  "lineage": "d8907bee-52ae-534e-3c25-320366a06dea",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "api_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "api-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "argocd",
                  "environment": "prod"
                },
                "name": "api-service",
                "resource_version": "2290664",
                "uid": "ca4e7412-7bfa-4b17-bbab-a8422cbe5f67"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_cloudwatch_log_group.eks",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.ebs_csi",
            "module.eks.aws_iam_role.node",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.aws_iam_role_policy_attachment.node_cni",
            "module.eks.aws_iam_role_policy_attachment.node_ecr",
            "module.eks.aws_iam_role_policy_attachment.node_ssm",
            "module.eks.aws_iam_role_policy_attachment.node_worker",
            "module.eks.aws_kms_alias.eks",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_launch_template.node",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster_ingress_node_https",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role",
            "module.eks.data.aws_iam_policy_document.ebs_csi_assume",
            "module.eks.data.aws_iam_policy_document.node_assume_role",
            "module.eks.data.tls_certificate.eks",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform"
                },
                "name": "argocd",
                "resource_version": "2292957",
                "uid": "6a10de41-9f92-4f29-bdd4-c69ef038dedc"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_cloudwatch_log_group.eks",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.ebs_csi",
            "module.eks.aws_iam_role.node",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.aws_iam_role_policy_attachment.node_cni",
            "module.eks.aws_iam_role_policy_attachment.node_ecr",
            "module.eks.aws_iam_role_policy_attachment.node_ssm",
            "module.eks.aws_iam_role_policy_attachment.node_worker",
            "module.eks.aws_kms_alias.eks",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_launch_template.node",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster_ingress_node_https",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role",
            "module.eks.data.aws_iam_policy_document.ebs_csi_assume",
            "module.eks.data.aws_iam_policy_document.node_assume_role",
            "module.eks.data.tls_certificate.eks",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform"
                },
                "name": "monitoring",
                "resource_version": "2292956",
                "uid": "b880b216-fcec-4c46-bf28-0f5fef0909a5"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_cloudwatch_log_group.eks",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.ebs_csi",
            "module.eks.aws_iam_role.node",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.aws_iam_role_policy_attachment.node_cni",
            "module.eks.aws_iam_role_policy_attachment.node_ecr",
            "module.eks.aws_iam_role_policy_attachment.node_ssm",
            "module.eks.aws_iam_role_policy_attachment.node_worker",
            "module.eks.aws_kms_alias.eks",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_launch_template.node",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster_ingress_node_https",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role",
            "module.eks.data.aws_iam_policy_document.ebs_csi_assume",
            "module.eks.data.aws_iam_policy_document.node_assume_role",
            "module.eks.data.tls_certificate.eks",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "worker_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "worker-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "argocd",
                  "environment": "prod"
                },
                "name": "worker-service",
                "resource_version": "2290663",
                "uid": "33ffab7a-ee96-4e99-8a81-e106003fd848"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_cloudwatch_log_group.eks",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.ebs_csi",
            "module.eks.aws_iam_role.node",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.aws_iam_role_policy_attachment.node_cni",
            "module.eks.aws_iam_role_policy_attachment.node_ecr",
            "module.eks.aws_iam_role_policy_attachment.node_ssm",
            "module.eks.aws_iam_role_policy_attachment.node_worker",
            "module.eks.aws_kms_alias.eks",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_launch_template.node",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster_ingress_node_https",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role",
            "module.eks.data.aws_iam_policy_document.ebs_csi_assume",
            "module.eks.data.aws_iam_policy_document.node_assume_role",
            "module.eks.data.tls_certificate.eks",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.addons",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "external_secrets",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "external-secrets",
            "metadata": [
              {
                "generation": 0,
                "name": "external-secrets",
                "resource_version": "2292955",
                "uid": "ecbca5a0-78dc-45a9-8c7b-9327e072f916"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_cloudwatch_log_group.eks",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.ebs_csi",
            "module.eks.aws_iam_role.node",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.aws_iam_role_policy_attachment.node_cni",
            "module.eks.aws_iam_role_policy_attachment.node_ecr",
            "module.eks.aws_iam_role_policy_attachment.node_ssm",
            "module.eks.aws_iam_role_policy_attachment.node_worker",
            "module.eks.aws_kms_alias.eks",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_launch_template.node",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster_ingress_node_https",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role",
            "module.eks.data.aws_iam_policy_document.ebs_csi_assume",
            "module.eks.data.aws_iam_policy_document.node_assume_role",
            "module.eks.data.tls_certificate.eks",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.addons",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "keda",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "keda",
            "metadata": [
              {
                "generation": 0,
                "name": "keda",
                "resource_version": "2292958",
                "uid": "619e739e-655b-4c79-b274-47eb808f7e85"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_cloudwatch_log_group.eks",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.ebs_csi",
            "module.eks.aws_iam_role.node",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.aws_iam_role_policy_attachment.node_cni",
            "module.eks.aws_iam_role_policy_attachment.node_ecr",
            "module.eks.aws_iam_role_policy_attachment.node_ssm",
            "module.eks.aws_iam_role_policy_attachment.node_worker",
            "module.eks.aws_kms_alias.eks",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_launch_template.node",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster_ingress_node_https",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role",
            "module.eks.data.aws_iam_policy_document.ebs_csi_assume",
            "module.eks.data.aws_iam_policy_document.node_assume_role",
            "module.eks.data.tls_certificate.eks",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:security-group/sg-014d7943487e32280",
            "description": "Control plane communication security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014d7943487e32280",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with the cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0111d0a7ae8ed87c2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-gitops-platform-cluster-sg",
            "name_prefix": "",
            "owner_id": "962765734677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-gitops-platform-cluster-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-cluster-sg",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:security-group/sg-0111d0a7ae8ed87c2",
            "description": "Worker node security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0111d0a7ae8ed87c2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all node-to-node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow control plane to communicate with worker nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014d7943487e32280"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow control plane to reach node kubelets",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014d7943487e32280"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-gitops-platform-node-sg",
            "name_prefix": "",
            "owner_id": "962765734677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-gitops-platform-node-sg",
              "kubernetes.io/cluster/eks-gitops-platform": "owned"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-node-sg",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform",
              "kubernetes.io/cluster/eks-gitops-platform": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_node_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with the cluster API",
            "from_port": 443,
            "id": "sgrule-1911917955",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-014d7943487e32280",
            "security_group_rule_id": "sgr-00b15b854898977be",
            "self": false,
            "source_security_group_id": "sg-0111d0a7ae8ed87c2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2cc7c3e81c5856d",
            "arn": "arn:aws:ec2:us-east-1:962765734677:elastic-ip/eipalloc-0e2cc7c3e81c5856d",
            "association_id": "eipassoc-0f7c17b57e64c9177",
            "domain": "vpc",
            "id": "eipalloc-0e2cc7c3e81c5856d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a68cf7fec3e1e3d3",
            "private_dns": "ip-10-0-1-160.ec2.internal",
            "private_ip": "10.0.1.160",
            "public_dns": "ec2-35-169-127-88.compute-1.amazonaws.com",
            "public_ip": "35.169.127.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-gitops-platform-nat-eip-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-nat-eip-us-east-1a",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:internet-gateway/igw-01cc28c1efe8555ce",
            "id": "igw-01cc28c1efe8555ce",
            "owner_id": "962765734677",
            "tags": {
              "Name": "eks-gitops-platform-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-igw",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform"
            },
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2cc7c3e81c5856d",
            "association_id": "eipassoc-0f7c17b57e64c9177",
            "connectivity_type": "public",
            "id": "nat-0d20dbcf13deb04d9",
            "network_interface_id": "eni-0a68cf7fec3e1e3d3",
            "private_ip": "10.0.1.160",
            "public_ip": "35.169.127.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03dc9931f39eb678b",
            "tags": {
              "Name": "eks-gitops-platform-nat-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-nat-us-east-1a",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:route-table/rtb-04224d98478825b4d",
            "id": "rtb-04224d98478825b4d",
            "owner_id": "962765734677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d20dbcf13deb04d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-gitops-platform-private-rt-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-private-rt-us-east-1a",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:route-table/rtb-09a8cbad2cd83f1bd",
            "id": "rtb-09a8cbad2cd83f1bd",
            "owner_id": "962765734677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d20dbcf13deb04d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-gitops-platform-private-rt-us-east-1b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-private-rt-us-east-1b",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:route-table/rtb-075e9051e86645073",
            "id": "rtb-075e9051e86645073",
            "owner_id": "962765734677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d20dbcf13deb04d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-gitops-platform-private-rt-us-east-1c"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-private-rt-us-east-1c",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:route-table/rtb-0467936b82caa4549",
            "id": "rtb-0467936b82caa4549",
            "owner_id": "962765734677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01cc28c1efe8555ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-gitops-platform-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-public-rt",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091b4e66aadcb4fbf",
            "route_table_id": "rtb-04224d98478825b4d",
            "subnet_id": "subnet-0bf826c6f391c2d83"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07335b1f544af662a",
            "route_table_id": "rtb-09a8cbad2cd83f1bd",
            "subnet_id": "subnet-0ac0ff3b820ea423b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b8a2d5939a6c61f",
            "route_table_id": "rtb-075e9051e86645073",
            "subnet_id": "subnet-03cce689a7da348f5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5460cf71f945645",
            "route_table_id": "rtb-0467936b82caa4549",
            "subnet_id": "subnet-03dc9931f39eb678b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee5e43ecf1ad3d62",
            "route_table_id": "rtb-0467936b82caa4549",
            "subnet_id": "subnet-02296bfc02d7c9d8b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070802d9d0a5c62c5",
            "route_table_id": "rtb-0467936b82caa4549",
            "subnet_id": "subnet-016a206c0cf23b3b4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:subnet/subnet-0bf826c6f391c2d83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf826c6f391c2d83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765734677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitops-platform-private-us-east-1a",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-private-us-east-1a",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:subnet/subnet-0ac0ff3b820ea423b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac0ff3b820ea423b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765734677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitops-platform-private-us-east-1b",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-private-us-east-1b",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:subnet/subnet-03cce689a7da348f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cce689a7da348f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765734677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitops-platform-private-us-east-1c",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-private-us-east-1c",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:subnet/subnet-03dc9931f39eb678b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dc9931f39eb678b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962765734677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitops-platform-public-us-east-1a",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-public-us-east-1a",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:subnet/subnet-02296bfc02d7c9d8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02296bfc02d7c9d8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962765734677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitops-platform-public-us-east-1b",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-public-us-east-1b",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:subnet/subnet-016a206c0cf23b3b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016a206c0cf23b3b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962765734677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitops-platform-public-us-east-1c",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-public-us-east-1c",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform",
              "kubernetes.io/cluster/eks-gitops-platform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04ac29ba194629fa3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765734677:vpc/vpc-04ac29ba194629fa3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033f37fef8842541b",
            "default_route_table_id": "rtb-0f4e49d37aa00f49d",
            "default_security_group_id": "sg-0bc7ba379fdcfe4cf",
            "dhcp_options_id": "dopt-0b6dfd3ac9c91f6b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ac29ba194629fa3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4e49d37aa00f49d",
            "owner_id": "962765734677",
            "tags": {
              "Name": "eks-gitops-platform-vpc",
              "kubernetes.io/cluster/eks-gitops-platform": "shared"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Mission": "Retail-Order-Processor",
              "Name": "eks-gitops-platform-vpc",
              "Owner": "Patricio-Lumbenlengo",
              "Project": "eks-gitops-platform",
              "kubernetes.io/cluster/eks-gitops-platform": "shared"
            }
          }
        }
      ]
    }
  ]
}